--- a/app/views/layouts/cases.html.haml
+++ b/app/views/layouts/cases.html.haml
@@ -1,7 +1,7 @@
 = content_for :content do
   .row
     %aside.span3
-      %ul.case_nav
+      %ul.nav_pages
         %li
           = link_to "Analysis", "/analysis"
         %li
