--- a/app/views/posts/_post_form.html.haml
+++ b/app/views/posts/_post_form.html.haml
@@ -11,4 +11,6 @@
     .field
       = f.text_area :content, placeholder: "Compose new post...", :rows => 3
 
-    = f.submit "Post", class: "btn btn-inverse pull-right"
+    %button.btn.btn-primary.pull-right{:type => "submit"}
+      %i.icon-arrow-right.icon-white
+      Post
