--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,17 +3,19 @@
     .container
       = link_to "casenexus.com", users_path, id: "logo"
       %nav
+
       - if signed_in?
         %ul.nav.pull-left
           %li= link_to "Users", users_path
           %li= link_to "Roulette", '/roulette'
-        %ul.nav.pull-right
           %li= link_to "Help", help_path
+
+        %ul.nav.pull-right
 
           / Messages pull down
           %li#fat-menu.dropdown
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-              N
+              %i.icon-comment.icon-white.icon-large
               %span.caret
             %ul.dropdown-menu
               %li
@@ -24,7 +26,7 @@
                        :style => ""}
                       %b
                         = User.find_by_id(message.sender_id).name
-                      = time_ago_in_words(message.created_at)
+                      = time_ago_in_words(message.created_at) + " ago"
                       %br
                       %p(style="font-size:90%;")
                         = message.content.truncate(35, :separator => ' ')
@@ -38,17 +40,21 @@
           / Profile pull-down
           %li#fat-menu.dropdown
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-              = "@" + @user_name
+              %i.icon-user.icon-white.icon-large
+              = @user_name
               %span.caret
             %ul.dropdown-menu
-              %li= link_to "Your Feedback", "/cases"
-              %li= link_to "Settings", edit_user_path(current_user)
+              %li= link_to raw("<i class=icon-book></i> Your Feedback"), "/cases"
+              %li= link_to raw("<i class=icon-cogs></i> Settings"), edit_user_path(current_user)
               %li.divider
-              %li
-                = link_to "Sign out", signout_path, method: "delete"
+              %li= link_to raw("<i class=icon-bolt></i> Sign out"), signout_path, method: "delete"
+
       -else
+
         / if not signed in...
-        %ul.nav.pull-right
+        %ul.nav.pull-left
           %li= link_to "Home", root_path
           %li= link_to "Help", help_path
-          %li= link_to "Sign in", signin_path
+
+        / %ul.nav.pull-right
+        /   %li= link_to "Sign in", signin_path
