--- a/app/views/layouts/cases.html.haml
+++ b/app/views/layouts/cases.html.haml
@@ -1,16 +1,18 @@
 = content_for :content do
   .row
     %aside.span3
-      %ul.nav_pages
-        %li
-          = link_to "Analysis", "/analysis"
-        %li
-          = link_to "Send feedback", "/cases/new"
-        %li
-          = link_to "Request feedback", "/request"
-        %li
-          = link_to "Cases", "/cases"
+      .panel.type1
+        %ul.nav_pages
+          %li
+            = link_to "Analysis", "/analysis"
+          %li
+            = link_to "Send feedback", "/cases/new"
+          %li
+            = link_to "Request feedback", "/request"
+          %li
+            = link_to "Cases", "/cases"
     .span9
-      = yield
+      .panel
+        = yield
 
 = render :template => 'layouts/application'
