--- a/app/views/layouts/cases.html.haml
+++ b/app/views/layouts/cases.html.haml
@@ -4,7 +4,7 @@
       .panel.type1
         %ul.nav_pages
           %li
-            = link_to "Analysis", "/analysis"
+            = link_to raw("<i class=icon-bar-chart icon-large></i> Analysis"), "/analysis"
           %li
             = link_to "Send feedback", "/cases/new"
           %li
