--- a/app/views/static_pages/help.html.haml
+++ b/app/views/static_pages/help.html.haml
@@ -1,5 +1,6 @@
 - provide(:title, 'Help')
 
 = content_for :content do
-  %h1 Help
-  %p hello!
+  .panel
+    %h1 Help
+    %p this is the help page!
