--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -13,9 +13,9 @@
           = f.text_field :email
           = f.label :password
           = f.password_field :password
-          = f.submit "Sign in", class: "btn btn-primary pull-right"
+          = f.submit "Sign in", class: "btn btn-inverse pull-right"
 
       .center
         %p
           This site does things
-        = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-primary"
+        = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-inverse"
