--- a/app/views/roulette/index.html.haml
+++ b/app/views/roulette/index.html.haml
@@ -1,56 +1,57 @@
 = content_for :content do
   %row
     %span12
-      %ul.r_grid
-        -if @onlineusers
-          - @onlineusers.each do |t|
+      .panel
+        %ul.r_grid
+          -if @onlineusers
+            - @onlineusers.each do |t|
 
-            - @onlineuser = User.find_by_remember_token(t)
+              - @onlineuser = User.find_by_remember_token(t)
 
-            %li.r_block
+              %li.r_block
 
-              %table.r_user
-                %tr
-                  %th(style="width:100px;")
-                  %th
-                %tr
-                  %td
-                    Name
-                  %td
-                    = @onlineuser.name
-                %tr
-                  %td
-                    Education
-                  %td
-                    = @onlineuser.education1
-                %tr
-                  %td
-                    Experience
-                  %td
-                    = @onlineuser.experience1
-                %tr
-                  %td
-                    Skill
-                  %td
-                    = @onlineuser.skill
-                %tr
-                  %td
-                    Cases to-date
-                  %td
-                    = @onlineuser.num
-                %tr
-                  %td
-                    City
-                  %td
-                    = @onlineuser.city
-                %tr
-                  %td
-                    Country
-                  %td
-                    = @onlineuser.country
+                %table.r_user
+                  %tr
+                    %th(style="width:100px;")
+                    %th
+                  %tr
+                    %td
+                      Name
+                    %td
+                      = @onlineuser.name
+                  %tr
+                    %td
+                      Education
+                    %td
+                      = @onlineuser.education1
+                  %tr
+                    %td
+                      Experience
+                    %td
+                      = @onlineuser.experience1
+                  %tr
+                    %td
+                      Skill
+                    %td
+                      = @onlineuser.skill
+                  %tr
+                    %td
+                      Cases to-date
+                    %td
+                      = @onlineuser.num
+                  %tr
+                    %td
+                      City
+                    %td
+                      = @onlineuser.city
+                  %tr
+                    %td
+                      Country
+                    %td
+                      = @onlineuser.country
 
-              %a{:href => "skype:#{@onlineuser.skype}?call"}
-                %img{:alt => "My status", :src => "http://mystatus.skype.com/bigclassic/christianclough", :style => "border: none;width: 182px;height: 44px;margin:20px;"}/
+                %a{:href => "skype:#{@onlineuser.skype}?call"}
+                  %img{:alt => "My status", :src => "http://mystatus.skype.com/bigclassic/christianclough", :style => "border: none;width: 182px;height: 44px;margin:20px;"}/
 
 
   %script{:src => "http://download.skype.com/share/skypebuttons/js/skypeCheck.js", :type => "text/javascript"}
