after volley ball train

--- a/app/views/layouts/cases.html.haml
+++ b/app/views/layouts/cases.html.haml
@@ -2,7 +2,7 @@
   .row
     %aside.span3
       .panel.type1.side
-        %ul.nav_pages
+        %ul.sidebar
           %li
             = link_to raw("<i class=icon-bar-chart icon-large></i> Analysis"), "/analysis"
           %li
