--- a/app/views/layouts/messages.html.haml
+++ b/app/views/layouts/messages.html.haml
@@ -2,7 +2,7 @@
   .row
     %aside.span3
       .panel.type1
-        %ul.nav_pages
+        %ul.sidebar
           %li
             = link_to "Inbox (#{@messages_count})", "/messages"
           %li
