--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -60,7 +60,7 @@
 
     / send message button
     %a#message_show.btn{:href => "#"}
-      Send Message    
+      Message    
       %span.caret
 
     / send feedback button
