--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+
+
 /////////////////HACKS////////////////////
 
 // FIELD HEIGHT SHRUNK TO 18px
@@ -12,6 +14,8 @@ input[type="text"], input[type="password"] {
 /* input[type=submit]{ */
 
 //////////////////HACKS///////////////////
+
+
 
 /* mixins, variables, etc. */
 $grayMediumLight: #eaeaea;
@@ -57,9 +61,9 @@ textarea {
 
 .panel{
   background: white;
-  margin:20px;
+  margin: 20px;
   border: 1px solid $grayLight;
-  padding:10px;
+  padding: 10px;
 
   border-radius: 5px;
   -moz-border-radius: 5px;
@@ -75,6 +79,10 @@ textarea {
 
   &.content{
     margin-left: 0px;
+  }
+
+  &.other{
+    margin-bottom: 0px;
   }
 }
 
@@ -277,26 +285,26 @@ input, textarea, select, .uneditable-input {
 }
 
 
+.panel_latlng {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100px;
+}
 
 /********** posts *****NEED TO TIDY?******/
 
 
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
-  }
-}
 
-.filter {
-  list-style: none;
-  height: 30px;
-  li {
-    float:left;
-    padding: 2px;
-    li { clear: both; }
-  }
-}
+// .filter {
+//   list-style: none;
+//   height: 30px;
+//   li {
+//     float:left;
+//     padding: 2px;
+//     li { clear: both; }
+//   }
+// }
 
 #posts{
   overflow:auto;
@@ -333,7 +341,7 @@ table.posts {
 
 /*********** Template **********/
 
-.nav_pages {
+.sidebar {
   list-style: none;
   li {
     padding:5px;
@@ -481,7 +489,6 @@ table.posts {
   border-radius: 15px;
 
 }
-
 
 .r_grid {
   list-style-type: none;
